# malasim-v6-SURF

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG-6.0.1.md  CHANGELOG-6.1.md  CLAUDE.md  CMakeLists.txt  README.md  code_review.md  profile_input.yml  vcpkg.json
EfficacyEstimator/: CMakeLists.txt  DxGGenerator_main.cpp  PkPdReporter.cpp  PkPdReporter.h
notebooks/: analyze_last_year.py  clinical_episodes.ipynb  clinical_episodes_analysis.ipynb  clinical_episodes_results.csv  clinical_episodes_results_Jan30.csv
sample_inputs/: input.yml  ken_seasonality_adjusted.csv  make_sample_seasonality_pattern.py
sample_inputs/clinical_episodes/: dev_beta.asc  dev_ecozone.asc  dev_init_pop.asc  dev_mosquito_ifr.asc  dev_mosquito_size.asc  dev_seasonality_pattern.csv  dev_travel.asc  dev_treatment.asc  input.yml
sample_inputs/single_loc_grid_based/: dev_beta.asc  dev_district.asc  dev_ecozone.asc  dev_init_pop.asc  dev_travel.asc  input.yml
sample_inputs/single_loc_location_based/: input.yml
src/: CMakeLists.txt
src/Configuration/: Config.cpp  DrugParameters.cpp  DrugParameters.h  EpidemiologicalParameters.h  GenotypeParameters.h  ModelSettings.h  MosquitoParameters.cpp  MovementSettings.h  ParasiteParameters.h
src/Core/: types.h
src/Environment/: SeasonalPattern.cpp
src/Events/: CirculateToTargetLocationNextDayEvent.h  ProgressToClinicalEvent.cpp  README.md  ReportTreatmentFailureDeathEvent.cpp  ReportTreatmentFailureDeathEvent.h  SwitchImmuneSystemModeEvent.cpp  SwitchImmuneSystemModeEvent.h
src/MDC/: ModelDataCollector.cpp  ModelDataCollector.h
src/Mosquito/: Mosquito.cpp  Mosquito.h
src/Parasites/: Genotype.cpp  GenotypeDatabase.h
src/Population/: ClonalParasitePopulation.h  Population.cpp  Population.h  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Reporters/: MMCReporter.cpp  MMCReporter.h  MonthlyReporter.cpp  MonthlyReporter.h  Reporter.cpp  (+9 more)
tests/: CMakeLists.txt  main.cpp
tests/Configuration/: ConfigTest.cpp  yaml_date_conversion_test.cpp  yaml_drug_parameters_conversion_test.cpp  yaml_epidemiological_parameters_conversion_test.cpp  yaml_genotype_parameters_conversion_test.cpp  yaml_parasite_parameters_conversion_test.cpp  yaml_population_events_conversion_test.cpp
tests/Core/Random/: RandomTest_random_roulette.cpp
tests/Environment/: SeasonalPatternTest.cpp
tests/Events/: ProgressToClinicalEventTest.cpp
tests/MDC/: ModelDataCollectorTest.cpp
tests/Parasites/: GenotypeTest.cpp
tests/Population/: ClonalParasitePopulationTest.cpp  DailyLocationPipelineTest.cpp  DrugsInBloodTest.cpp  ImmuneSystemTest.cpp  PopulationGenerateIndividualTest.cpp  SingleHostClonalParasitePopulationsTest.cpp
tests/Population/Person/: PersonBasicTest.cpp  PersonEventTest.cpp  PersonRecrudescenceTest.cpp  PersonTestBase.h
tests/Spatial/GIS/: LocationPairTableTest.cpp
tests/Spatial/Movement/: BarabasiSMTest.cpp  BurkinaFasoSMTest.cpp  SampleInputMovementModelsTest.cpp  WesolowskiSMTest.cpp  WesolowskiSurfaceSMTest.cpp
tests/Treatment/: LinearTCMTest.cpp
tests/Treatment/Strategies/: AdaptiveCyclingStrategyTest.cpp  CyclingStrategyTest.cpp  DistrictMftStrategyTest.cpp  MFTAgeBasedStrategyTest.cpp  MFTMultiLocationStrategyTest.cpp  MFTRebalancingStrategyTest.cpp  MFTStrategyTest.cpp  NestedMFTMultiLocationStrategyTest.cpp  NestedMFTStrategyTest.cpp  SFTStrategyTest.cpp  StrategyBuilderTest.cpp
tests/Treatment/Therapies/: DrugDatabaseTest.cpp  DrugTest.cpp  DrugTypeTest.cpp  MACTherapyTest.cpp  SCTherapyTest.cpp  TherapyBuilderTest.cpp  TherapyTest.cpp
tests/Utils/: CliTest.cpp
(+48 files in other folders)
